@@ -1,0 +1,165 @@
+# Copyright 1999-2008 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/net-libs/xulrunner/xulrunner-1.9_rc2.ebuild,v 1.1 2008/06/05 14:01:54 armin76 Exp $
+
+EAPI="prefix"
+
+WANT_AUTOCONF="2.1"
+
+inherit flag-o-matic toolchain-funcs eutils mozconfig-3 makeedit multilib java-pkg-opt-2 python autotools
+PATCH="${PN}-1.9_rc1-patches-0.1"
+
+DESCRIPTION="Mozilla runtime package that can be used to bootstrap XUL+XPCOM applications"
+HOMEPAGE="http://developer.mozilla.org/en/docs/XULRunner"
+SRC_URI="mirror://gentoo/${P}.tar.bz2
+	mirror://gentoo/${PATCH}.tar.bz2"
+
+KEYWORDS="~amd64-linux ~x86-linux"
+SLOT="1.9"
+LICENSE="|| ( MPL-1.1 GPL-2 LGPL-2.1 )"
+IUSE=""
+
+RDEPEND="java? ( >=virtual/jre-1.4 )
+	>=sys-devel/binutils-2.16.1
+	>=dev-libs/nss-3.12_rc4
+	>=dev-libs/nspr-4.7.1
+	>=app-text/hunspell-1.1.9
+	>=media-libs/lcms-1.17
+	>=dev-db/sqlite-3.5.6"
+
+DEPEND="java? ( >=virtual/jdk-1.4 )
+	${RDEPEND}
+	dev-util/pkgconfig"
+
+S="${WORKDIR}/mozilla"
+
+# Needed by src_compile() and src_install().
+# Would do in pkg_setup but that loses the export attribute, they
+# become pure shell variables.
+export MOZ_CO_PROJECT=xulrunner
+export BUILD_OFFICIAL=1
+export MOZILLA_OFFICIAL=1
+
+src_unpack() {
+	unpack ${A}
+
+	# Apply our patches
+	cd "${S}" || die "cd failed"
+	EPATCH_SUFFIX="patch" \
+	EPATCH_FORCE="yes" \
+	epatch "${WORKDIR}"/patch
+
+	epatch "${FILESDIR}"/${PN}-1.9_beta5-prefix.patch
+	eprefixify \
+		extensions/java/xpcom/interfaces/org/mozilla/xpcom/Mozilla.java \
+		xpcom/build/nsXPCOMPrivate.h \
+		xulrunner/installer/Makefile.in \
+		xulrunner/app/nsRegisterGREUnix.cpp
+
+	eautoreconf || die "failed  running eautoreconf"
+}
+
+src_compile() {
+	declare MOZILLA_FIVE_HOME="/usr/$(get_libdir)/${PN}-1.9"
+
+	####################################
+	#
+	# mozconfig, CFLAGS and CXXFLAGS setup
+	#
+	####################################
+
+	mozconfig_init
+	mozconfig_config
+
+	mozconfig_annotate '' --enable-extensions="${MEXTENSIONS}"
+	mozconfig_annotate '' --disable-mailnews
+	mozconfig_annotate 'broken' --disable-mochitest
+	mozconfig_annotate 'broken' --disable-crashreporter
+	mozconfig_annotate '' --enable-system-hunspell
+	mozconfig_annotate '' --enable-system-sqlite
+	mozconfig_annotate '' --enable-image-encoder=all
+	mozconfig_annotate '' --enable-canvas
+	#mozconfig_annotate '' --enable-js-binary
+	mozconfig_annotate '' --enable-embedding-tests
+	mozconfig_annotate '' --with-system-nspr
+	mozconfig_annotate '' --with-system-nss
+	mozconfig_annotate '' --enable-system-lcms
+	mozconfig_annotate '' --with-system-bz2
+	# Bug 60668: Galeon doesn't build without oji enabled, so enable it
+	# regardless of java setting.
+	mozconfig_annotate '' --enable-oji --enable-mathml
+	mozconfig_annotate 'places' --enable-storage --enable-places --enable-places_bookmarks
+
+	# Other ff-specific settings
+	mozconfig_annotate '' --enable-jsd
+	mozconfig_annotate '' --enable-xpctools
+	mozconfig_annotate '' --disable-libxul
+	mozconfig_annotate '' --with-default-mozilla-five-home="${EPREFIX}"${MOZILLA_FIVE_HOME}
+
+	#disable java
+	if ! use java ; then
+		mozconfig_annotate '-java' --disable-javaxpcom
+	fi
+
+	# Finalize and report settings
+	mozconfig_final
+
+	# -fstack-protector breaks us
+	if gcc-version ge 4 1; then
+		gcc-specs-ssp && append-flags -fno-stack-protector
+	else
+		gcc-specs-ssp && append-flags -fno-stack-protector-all
+	fi
+	filter-flags -fstack-protector -fstack-protector-all
+
+	####################################
+	#
+	#  Configure and build
+	#
+	####################################
+
+	CPPFLAGS="${CPPFLAGS} -DARON_WAS_HERE" \
+	CC="$(tc-getCC)" CXX="$(tc-getCXX)" LD="$(tc-getLD)" \
+	econf || die
+
+	# It would be great if we could pass these in via CPPFLAGS or CFLAGS prior
+	# to econf, but the quotes cause configure to fail.
+	sed -i -e \
+		's|-DARON_WAS_HERE|-DGENTOO_NSPLUGINS_DIR=\\\"${EPREFIX}/usr/'"$(get_libdir)"'/nsplugins\\\" -DGENTOO_NSBROWSER_PLUGINS_DIR=\\\"${EPREFIX}/usr/'"$(get_libdir)"'/nsbrowser/plugins\\\"|' \
+		"${S}"/config/autoconf.mk \
+		"${S}"/toolkit/content/buildconfig.html
+
+	# This removes extraneous CFLAGS from the Makefiles to reduce RAM
+	# requirements while compiling
+	edit_makefiles
+
+	emake || die "emake failed"
+}
+
+src_install() {
+	declare MOZILLA_FIVE_HOME="/usr/$(get_libdir)/${PN}-1.9"
+
+	emake DESTDIR="${D}" install || die "emake install failed"
+
+	rm "${ED}"/usr/bin/xulrunner
+
+	dodir /usr/bin
+	dosym ${MOZILLA_FIVE_HOME}/xulrunner /usr/bin/xulrunner-1.9
+
+	X_DATE=`date +%Y%m%d`
+
+	# Add Gentoo package version to preferences - copied from debian rules
+	echo // Gentoo package version \
+		> "${ED}"${MOZILLA_FIVE_HOME}/defaults/pref/vendor.js
+	echo "pref(\"general.useragent.product\",\"Gecko\");" \
+		>> "${ED}"${MOZILLA_FIVE_HOME}/defaults/pref/vendor.js
+	echo "pref(\"general.useragent.productSub\",\"${X_DATE}\");" \
+		>> "${ED}"${MOZILLA_FIVE_HOME}/defaults/pref/vendor.js
+	echo "pref(\"general.useragent.productComment\",\"Gentoo\");" \
+		>> "${ED}"${MOZILLA_FIVE_HOME}/defaults/pref/vendor.js
+
+	if use java ; then
+	    java-pkg_dojar "${ED}"${MOZILLA_FIVE_HOME}/javaxpcom.jar
+	    rm -f "${ED}"${MOZILLA_FIVE_HOME}/javaxpcom.jar
+	fi
+}
