@@ -1,6 +1,11 @@
 # ChangeLog for net-libs/xulrunner
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/xulrunner/ChangeLog,v 1.110 2008/05/21 10:49:10 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/xulrunner/ChangeLog,v 1.111 2008/06/05 14:01:54 armin76 Exp $
+
+*xulrunner-1.9_rc2 (05 Jun 2008)
+
+  05 Jun 2008; Raúl Porcel <armin76@gentoo.org> +xulrunner-1.9_rc2.ebuild:
+  Version bump
 
   21 May 2008; Raúl Porcel <armin76@gentoo.org>
   -xulrunner-1.9_beta5-r1.ebuild:
